fixed the alignment of Portfolio section

--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -4,7 +4,7 @@
 }
 
 .footer__title {
-    margin-bottom: 1rem;
+    margin-top: 1rem;
 }
 .footer__container {
     padding: 1rem 0 2rem;
